# direct-rf

./: .gitignore  Cargo.toml  LICENSE  memory.x
.cargo/: config.toml
.zed/: debug.json  tasks.json
common/: Cargo.toml
common/src/: comm_messages.rs  lib.rs  sequence.rs
firmware/: Cargo.toml  debug.sh  memory.x
firmware/.cargo/: config.toml
firmware/src/: autochirp.rs  comm.rs  comm_messages.rs  main.rs  sequencer.rs  util.rs
receiver/: Cargo.toml
receiver/src/: correlator.rs  dsp.rs  main.rs  stream.rs
scripts/: plot-1d.py  plot-spectrogram.py
software/: Cargo.toml
software/src/: main.rs  orders.rs  sequence.rs
src/: autochirp.rs  main.rs
