# Cargo.toml
[package]
name = "directrf"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
libm = "0.2.15"


[dependencies.stm32h7]
version = "^0.16.0"
features = ["stm32h7s", "rt"]

[dependencies.cortex-m]
version="0.7.7"
features=["critical-section-single-core"]