[workspace]
resolver="3"
members=["common", "firmware", "software"]

# Optimize all sub-crates for size in dev, but not the top crate, so debugging is easy
[profile.dev.package."*"]
opt-level = "z"

[profile.release]
debug=true
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction
