# Cargo.toml
[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
libm = "0.2.15"
serde = { version = "1.0.0", default-features = false }
postcard = "1.0.0"
heapless = "0.8.0"
common = { path = "../common" }

[dependencies.stm32h7]
version = "^0.16.0"
features = ["stm32h7s", "rt"]

[dependencies.cortex-m]
version="0.7.7"
features=["critical-section-single-core"]
